--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -18,8 +18,11 @@ $intro-text-color:  #505257;
 
 $item-title-color:    #4A4A4A;
 $item-content-color:  #999999;
-$item-border-color:   #eae8e5;
+$border:   #eee;
 
 
 $gradient-cool: #50E3C2, #53A0FD, #B4EC51;
 $gradient-warm: #FAC661, #FB9B36, #FFDA34;
+
+$bg-panel-header: #fcfcfc;
+$bg-panel-header-active: white
