--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -25,4 +25,8 @@ $gradient-cool: #50E3C2, #53A0FD, #B4EC51;
 $gradient-warm: #FAC661, #FB9B36, #FFDA34;
 
 $bg-panel-header: #fcfcfc;
-$bg-panel-header-active: white
+$bg-panel-header-active: white;
+
+
+$fz-nav: 20px;
+$fz-main: 14px;
