--- a/src/assets/scss/_font.scss
+++ b/src/assets/scss/_font.scss
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "DS-Digital";
-  src: url("~@/assets/fonts/DSDigital.ttf");
+  src: url(@/assets/scss/fonts/DSDigital.ttf);
 }
